cluster/apps/kutt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kutt
  labels:
    app.kubernetes.io/name: kutt
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kutt
